Enhance accueil.html with charset and header
Added meta charset and header to accueil.html

--- a/accueil.html
+++ b/accueil.html
@@ -1,4 +1,5 @@
-<html>
-  <head> 
-    <title>Science Numerique et technologique site web</title>
+<html> 
+	<head>
+		<meta charset="utf-8" />
+                <h1>Ma petite page de SNT</h1>
   
