--- a/accueil.html
+++ b/accueil.html
@@ -1,5 +1,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <h1>Science Numerique et technologique site web</h1>
+    <h1>Science Numerique et technologique site web</h1>}
+    
 </head>
+
+</body> 
+  <hr width= "40%" align= "left" size= "2px" color="black"/>
